# cmake-examples

01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/src/: main.cpp
